# trello-cli

./: .gitignore  README.md  pyproject.toml
trello_cli/: __init__.py  cli.py  trello_api.py
trello_cli/tests/: test_cli.py  test_trello_api.py
